kubernetes/ingress-exam/nginx-go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx:1.21
        name: nginx-container
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: goapp-deployment
  labels:
    app: goapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: goapp
  template:
    metadata:
      labels:
        app: goapp
    spec:
      containers:
      - image: leehorim/goapp:1.0
        name: goapp-container
        ports:
        - containerPort: 9090
