kubernetes/ingress-exam/nginx-go-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: goapp-lb
spec:
  type: NodePort
  selector:
    app: goapp
  ports:
  - port: 80
    targetPort: 9090
